--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ section{
     gap: 10px;
     flex-wrap: wrap;
     justify-content: center;
-    width: 55%;
+    width: 45%;
     margin: 0 auto;
 }
 
@@ -40,7 +40,7 @@ section{
 }
 
 .box:hover{
-    border: 1px solid #feba05;
+    border: 1px solid white;
 }   
 
 
